# cylindrical-detector

./: README.md
cylindrical-detector/: CMakeLists.txt
cylindrical-detector-gistogramm/: CMakeLists.txt  run.mac
cylindrical-detector-gistogramm/include/: EventAction.hh  MySensitiveDetector.hh  PrimaryGeneratorAction.hh  RunAction.hh
cylindrical-detector-gistogramm/src/: MySensitiveDetector.cc  RunAction.cc
cylindrical-detector-update/: vis.mac
cylindrical-detector-update/include/: runAction.hh
cylindrical-detector-update/src/: DetectorConstruction.cc  MySensitiveDetector.cc  RunAction.cc  main.cc
cylindrical-detector/include/: DetectorConstruction.hh
cylindrical-detector/src/: DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc
magnetik/: CMakeLists.txt
magnetik/include/: DetectorConstruction.hh  PrimaryGeneratorAction.hh
magnetik/src/: AnalysisManager.cc  DetectorConstruction.cc  MySensitiveDetector.cc  PrimaryGeneratorAction.cc
magnetik2/: CMakeLists.txt  run.mac
magnetik2/include/: EventAction.hh  PhysicsList.hh  RunAction.hh
magnetik2/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
magnetik_50_20/: plot_dedx.C  vis.mac
magnetik_50_20/include/: AnalysisManager.hh  DetectorConstruction.hh  EventAction.hh  GlobalConfiguration.hh  MySensitiveDetector.hh  PrimaryGeneratorAction.hh  RunAction.hh
magnetik_50_20/src/: AnalysisManager.cc  DetectorConstruction.cc  EventAction.cc  MySensitiveDetector.cc  PrimaryGeneratorAction.cc  RunAction.cc  main.cc
proton105/: CMakeLists.txt  init_vis.mac
proton105/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
proton105/src/: DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
